Fix the spacing issue in button groups

--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -23,7 +23,7 @@
 
     .__buttons {
         .components-button {
-            margin-right: 6px;
+            margin-right: 4px;
         }
     }
 }
